@@ -201,7 +201,7 @@ $ui->addContent('left_area_middle', $tool_html);
 /*
  * Main content
  */
- $welcome_msg = sprintf("<span>%s</span><em>%s<em>",_("Welcome"), $node->getName());
+ $welcome_msg = sprintf("<span>%s</span><em>%s</em>",_("Welcome to"), $node->getName());
  $ui->addContent('page_header', "<h1>$welcome_msg</h1>");
 // While in validation period, alert user that he should validate his account ASAP
 if ($current_user && $current_user->getAccountStatus() == ACCOUNT_STATUS_VALIDATION) {
