@@ -54,8 +54,8 @@
             <span class="tool_user_info">
                 {if $isValidUser}
                     <p>{"Logged in as"|_}: {$username}</p>
-                    <a class="administration" href="{$base_ssl_path}admin/generic_object_admin.php?object_id={$userId}&object_class=User&action=edit"><img class="administration" src="{$common_images_url}profile.gif">{"Preferences"|_}</a>
-                    <a class="administration" href="{$base_ssl_path}login/?logout=true{$logoutParameters}"><img class="administration" src="{$common_images_url}logout.gif">{"Logout"|_}</a>
+                    <a class="administration" href="{$base_ssl_path}admin/generic_object_admin.php?object_id={$userId}&object_class=User&action=edit"><img class="administration" src="{$common_images_url}profile.gif">&nbsp;{"Preferences"|_}</a>
+                    <a class="administration" href="{$base_ssl_path}login/?logout=true{$logoutParameters}"><img class="administration" src="{$common_images_url}logout.gif">&nbsp;{"Logout"|_}</a>
                 {else}
 					{if !$shrinkLeftArea}
                     <p>
@@ -64,8 +64,8 @@
                     </p>
 					{/if}
 
-                    <a class="administration" href="{$networkHomepageURL}"><img class="administration" src="{$common_images_url}lien_ext.gif">{$networkName}</a>
-                    <a class="administration" href="{$base_url_path}faq.php"><img class="administration" src="{$common_images_url}where.gif">{"Where am I?"|_}</a>
+                    <a class="administration" href="{$networkHomepageURL}"><img class="administration" src="{$common_images_url}lien_ext.gif">&nbsp;{$networkName}</a>
+                    <a class="administration" href="{$base_url_path}faq.php"><img class="administration" src="{$common_images_url}where.gif">&nbsp;{"Where am I?"|_}</a>
                 {/if}
             </span>
         </div>
